Fixing delineate_with_hash - breaks if only one instance of element.

--- a/lib/rfm/sax/fmresultset.yml
+++ b/lib/rfm/sax/fmresultset.yml
@@ -37,7 +37,7 @@ elements:
   class: Rfm::Record
   initialize: [new, object]
   attach: array
-  before_close: @loaded=true
+  before_close: '@loaded=true'
   elements:
   - name: field
     class: Rfm::Metadata::Field
@@ -54,7 +54,7 @@ elements:
     - name: record
       class: Rfm::Record
       attach: array
-      before_close: @loaded=true
+      before_close: '@loaded=true'
       elements:
       - name: field
         compact: true
