_get_attribute is now  working for hashes, but it's not perfect - there is a blank fiel_meta key in Rooms.layout.view, create_accessors is not working correctly for shared var hash.

--- a/lib/rfm/utilities/sax/fmresultset.yml
+++ b/lib/rfm/utilities/sax/fmresultset.yml
@@ -22,9 +22,11 @@ elements:
 - name:  metadata
   attach: none
 - name: field_definition
+  class: Rfm::Metadata::Field
   delineate_with_hash: name
   as_name: field_meta
   attach: shared
+  attach_attributes: instance
 - name: relatedset_definition
   delineate_with_hash: table
   as_name: portal_meta
