--- a/lib/rfm/utilities/sax/fmresultset.yml
+++ b/lib/rfm/utilities/sax/fmresultset.yml
@@ -2,13 +2,15 @@
 # YAML structure defining a SAX xml parsing scheme/fmp-grammar.
 
 
-# This is for the newly rewritten object-merge methods.
+# This is for dynamic shared instance variables and dynamic accessors.
 ---
+attach_elements: _meta
+attach_attributes: _meta
+create_accessors: shared
 elements:
 - name: fmresultset
   attach: none
 - name: product
-  attach: shared
 - name: error
   attach: none
   attributes:
@@ -22,24 +24,23 @@ elements:
   class: Rfm::Metadata::Field
   delineate_with_hash: name
   as_name: field_meta
-  attach: shared
   attach_attributes: instance
 - name: relatedset_definition
   delineate_with_hash: table
   as_name: portal_meta
-  attach: shared
   elements:
   - name: field_definition
     class: Rfm::Metadata::Field
     delineate_with_hash: name
     as_name: field_meta
-    attach: shared
+    #attach: _meta
     attach_attributes: instance
 - name: resultset
   attach: none
 - name: record
   class: Rfm::Record
   initialize: [new, object]
+  attach: array
   attach_attributes: instance
   before_close: '@loaded=true'
   elements:
@@ -66,6 +67,78 @@ elements:
         attach: cursor
         before_close: :end_element_callback
 
+
+
+
+
+
+# # This is for the newly rewritten object-merge methods.
+# ---
+# # attach_elements: _meta
+# # attach_attributes: _meta
+# # create_accessors: shared
+# elements:
+# - name: fmresultset
+#   attach: none
+# - name: product
+#   attach: shared
+# - name: error
+#   attach: none
+#   attributes:
+#   - name: code
+#     as_name: error
+# - name: datasource
+#   attach: none
+# - name:  metadata
+#   attach: none
+# - name: field_definition
+#   class: Rfm::Metadata::Field
+#   delineate_with_hash: name
+#   as_name: field_meta
+#   attach: shared
+#   attach_attributes: instance
+# - name: relatedset_definition
+#   delineate_with_hash: table
+#   as_name: portal_meta
+#   attach: shared
+#   elements:
+#   - name: field_definition
+#     class: Rfm::Metadata::Field
+#     delineate_with_hash: name
+#     as_name: field_meta
+#     attach: shared
+#     attach_attributes: instance
+# - name: resultset
+#   attach: none
+# - name: record
+#   class: Rfm::Record
+#   initialize: [new, object]
+#   attach_attributes: instance
+#   before_close: '@loaded=true'
+#   elements:
+#   - name: field
+#     class: Rfm::Metadata::Field
+#     compact: true
+#     attach: cursor
+#     before_close: :end_element_callback
+#   - name: relatedset
+#     class: Array
+#     as_name: portals
+#     attach: instance
+#     attach_attributes: instance
+#     delineate_with_hash: table
+#     elements:
+#     - name: record
+#       class: Rfm::Record
+#       attach_attributes: instance
+#       before_close: '@loaded=true'
+#       elements:
+#       - name: field
+#         compact: true
+#         class: Rfm::Metadata::Field
+#         attach: cursor
+#         before_close: :end_element_callback
+# 
 
 
 # # This puts all metadata into the @attributes var.
