--- a/lib/rfm/utilities/sax/fmpxmllayout.yml
+++ b/lib/rfm/utilities/sax/fmpxmllayout.yml
@@ -1,6 +1,11 @@
 #!/usr/bin/env ruby
 ---
 elements:
+- name: doctype
+  attach: none
+  attributes:
+  - name: value
+    as_name: doctype
 - name: FMPXMLLAYOUT
   attach: none
 - name: ERRORCODE
@@ -22,7 +27,7 @@ elements:
   as_name: field_controls
   attach: shared
   delineate_with_hash: name
-  attach_attributes: instance
+  attach_attributes: private
   attributes:
   - name: NAME
     as_name: name
@@ -30,7 +35,7 @@ elements:
   - name: STYLE
     attach: none
     # Add logic for 3rd level of prefs, so FieldControl pref captures this attach_attributes instead having to explicitly define here.
-    attach_attributes: instance
+    attach_attributes: private
     attributes:
     - name: TYPE
       as_name: type
