Changed sax parser attach option from 'instance' to 'private'. Changed sax parserdelineate_with_hash to 'delimiter'.

--- a/lib/rfm/utilities/sax/fmpxmllayout.yml
+++ b/lib/rfm/utilities/sax/fmpxmllayout.yml
@@ -26,7 +26,7 @@ elements:
   class: Rfm::Metadata::FieldControl
   as_name: field_controls
   attach: shared
-  delineate_with_hash: name
+  delimiter: name
   attach_attributes: private
   attributes:
   - name: NAME
