--- a/lib/rfm/utilities/sax/fmresultset.yml
+++ b/lib/rfm/utilities/sax/fmresultset.yml
@@ -62,6 +62,7 @@ elements:
     as_name: portals
     attach: private
     attach_attributes: private
+    create_accessors: all
     delimiter: table
     elements:
     - name: record
