Fixed issue in _get_attribute that was breaking attach_attributes:private.

--- a/lib/rfm/utilities/sax/fmresultset.yml
+++ b/lib/rfm/utilities/sax/fmresultset.yml
@@ -37,6 +37,7 @@ elements:
 - name: relatedset_definition
   delimiter: table
   as_name: portal_meta
+  attach_attributes: private
   elements:
   - name: field_definition
     class: Rfm::Metadata::Field
