--- a/lib/rfm/utilities/sax/fmresultset.yml
+++ b/lib/rfm/utilities/sax/fmresultset.yml
@@ -6,7 +6,7 @@
 ---
 attach_elements: _meta
 attach_attributes: _meta
-#create_accessors: all
+create_accessors: all
 elements:
 - name: doctype
   attach: none
