--- a/lib/rfm/utilities/sax/fmresultset.yml
+++ b/lib/rfm/utilities/sax/fmresultset.yml
@@ -26,11 +26,12 @@ elements:
 - name:  metadata
   attach: none
 - name: field_definition
-  class: Rfm::Metadata::Field
-  attach: cursor
-  delimiter: name
-  as_name: field_meta
-  attach_attributes: private
+  handler: [object.meta, new_field_handler, _attributes]
+  #   class: Rfm::Metadata::Field
+  #   attach: cursor
+  #   delimiter: name
+  #   as_name: field_meta
+  #   attach_attributes: private
   before_close: :main_callback
 - name: relatedset_definition
   delimiter: table
@@ -66,8 +67,6 @@ elements:
     elements:
     - name: record
       class: Rfm::Record
-      # Should this be enabled?
-      #initialize: [new, object]
       attach_attributes: private
       before_close: '@loaded=true'
       elements:
