--- a/lib/rfm/utilities/sax/fmpxmllayout.yml
+++ b/lib/rfm/utilities/sax/fmpxmllayout.yml
@@ -20,7 +20,6 @@ elements:
   - name: text
     as_name: error
 - name: PRODUCT
-  #attach: shared
   as_name: product
 - name: LAYOUT
   attach: none
@@ -31,14 +30,10 @@ elements:
     as_name: name
 - name: FIELD
   handler: [object.meta, new_field_control_handler, _attributes]
-  #   class: Rfm::Metadata::FieldControl
-  #   as_name: field_controls
-  #   #attach: shared
-  #   delimiter: name
-  #   attach_attributes: private
-  #   attributes:
-  #   - name: NAME
-  #     as_name: name
+  attach_attributes: private
+  attributes:
+  - name: NAME
+    as_name: name
   elements:
   - name: STYLE
     attach: none
@@ -68,6 +63,71 @@ elements:
     - name: text
       as_name: value
 
+
+# Works - doesn't use Handler method.
+# ---
+# attach_elements: _meta
+# attach_attributes: _meta
+# elements:
+# - name: doctype
+#   attach: none
+#   attributes:
+#   - name: value
+#     as_name: doctype
+# - name: FMPXMLLAYOUT
+#   attach: none
+# - name: ERRORCODE
+#   attach: none
+#   # TODO: Build check_for_errors method in Layout class.
+#   #before_close: 'check_for_errors'
+#   attributes:
+#   - name: text
+#     as_name: error
+# - name: PRODUCT
+#   as_name: product
+# - name: LAYOUT
+#   attach: none
+#   attributes:
+#   - name: DATABASE
+#     as_name: database
+#   - name: NAME
+#     as_name: name
+# - name: FIELD
+#   class: Rfm::Metadata::FieldControl
+#   as_name: field_controls
+#   delimiter: name
+#   attach_attributes: private
+#   attributes:
+#   - name: NAME
+#     as_name: name
+#   elements:
+#   - name: STYLE
+#     attach: none
+#     # Add logic for 3rd level of prefs, so FieldControl pref captures this attach_attributes instead having to explicitly define here.
+#     attach_attributes: private
+#     attributes:
+#     - name: TYPE
+#       as_name: type
+#     - name: VALUELIST
+#       as_name: valuelist
+# - name: VALUELISTS
+#   attach: none
+# - name: VALUELIST
+#   # TODO: Disabling this breaks the delimiter.
+#   #attach: shared
+#   class: Array
+#   as_name: value_lists
+#   delimiter: NAME
+#   elements:
+#   - name: VALUE
+#     class: Rfm::Metadata::ValueListItem
+#     before_close: replace(@value.to_s)
+#     attach_attributes: private
+#     attributes:
+#     - name: DISPLAY
+#       as_name: display
+#     - name: text
+#       as_name: value
 
 
 
@@ -117,92 +177,5 @@ elements:
 #     attributes:
 #     - name: DISPLAY
 #       as_name: display
-
-
-
-# Works !!!
-# ---
-# elements:
-# - name: FMPXMLLAYOUT
-#   attach: none
-#   attach_attributes: shared
-# - name: ERRORCODE
-#   as_name: error
-#   attach: shared
-#   compact: true
-# - name: PRODUCT
-#   attach: none
-#   attach_attributes: shared
-# - name: LAYOUT
-#   attach: none
-#   attach_attributes: shared
-# - name: FIELD
-#   class: Rfm::Metadata::FieldControl
-#   as_name: field_controls
-#   delineate_with_hash: NAME
-#   elements:
-#   - name: STYLE
-#     attach: none
-#     attributes:
-#     - name: TYPE
-#       as_name: type
-#     - name: VALUELIST
-#       as_name: valuelist
-# - name: VALUELISTS
-#   attach: none
-# - name: VALUELIST
-#   class: Array
-#   as_name: value_lists
-#   attach_attributes: instance
-#   delineate_with_hash: NAME
-#   attach_elements: array
-#   elements:
-#   - name: VALUE
-#     class: Rfm::Metadata::Value
-#     before_close: :attach_objects
-#     attributes:
-#     - name: DISPLAY
-#       as_name: display
-
- 
-  
-# Works !!!
-# ---
-# elements:
-# - name: FMPXMLLAYOUT
-#   attach: none
-#   attach_attributes: shared
-# - name: ERRORCODE
-#   as_name: error
-#   attach: shared
-#   compact: true
-# - name: PRODUCT
-#   attach: none
-#   attach_attributes: shared
-# - name: LAYOUT
-#   attach: none
-#   attach_attributes: shared
-# - name: FIELD
-#   class: Rfm::Metadata::FieldControl
-#   as_name: field_controls
-#   delineate_with_hash: NAME
-#   elements:
-#   - name: STYLE
-#     attach: none
-#     attributes:
-#     - name: TYPE
-#       as_name: type
-#     - name: VALUELIST
-#       as_name: valuelist
-# - name: VALUELISTS
-#   attach: none
-# - name: VALUELIST
-#   class: Array
-#   as_name: value_lists
-#   attach_attributes: instance
-#   delineate_with_hash: NAME
-#   attach_elements: array
-# 
-
 
 
