--- a/lib/rfm/utilities/sax/fmresultset.yml
+++ b/lib/rfm/utilities/sax/fmresultset.yml
@@ -27,11 +27,6 @@ elements:
   attach: none
 - name: field_definition
   handler: [object.meta, new_field_handler, _attributes]
-  #   class: Rfm::Metadata::Field
-  #   attach: cursor
-  #   delimiter: name
-  #   as_name: field_meta
-  #   attach_attributes: private
   before_close: :main_callback
 - name: relatedset_definition
   delimiter: table
@@ -55,7 +50,6 @@ elements:
     class: Rfm::Metadata::Datum
     compact: true
     attach: cursor
-    # before_close: :main_callback
     before_close: :handler_callback
   - name: relatedset
     class: Array
@@ -78,7 +72,7 @@ elements:
 
 
 
-
+# Works - doesn't use Handler methods.
 # ---
 # attach_elements: _meta
 # attach_attributes: _meta
@@ -156,250 +150,3 @@ elements:
 #         class: Rfm::Metadata::Datum
 #         attach: cursor
 #         before_close: :portal_callback
-
-
-
-
-
-
-# # This is for the newly rewritten object-merge methods.
-# ---
-# # attach_elements: _meta
-# # attach_attributes: _meta
-# # create_accessors: shared
-# elements:
-# - name: fmresultset
-#   attach: none
-# - name: product
-#   attach: shared
-# - name: error
-#   attach: none
-#   attributes:
-#   - name: code
-#     as_name: error
-# - name: datasource
-#   attach: none
-# - name:  metadata
-#   attach: none
-# - name: field_definition
-#   class: Rfm::Metadata::Field
-#   delineate_with_hash: name
-#   as_name: field_meta
-#   attach: shared
-#   attach_attributes: instance
-# - name: relatedset_definition
-#   delineate_with_hash: table
-#   as_name: portal_meta
-#   attach: shared
-#   elements:
-#   - name: field_definition
-#     class: Rfm::Metadata::Field
-#     delineate_with_hash: name
-#     as_name: field_meta
-#     attach: shared
-#     attach_attributes: instance
-# - name: resultset
-#   attach: none
-# - name: record
-#   class: Rfm::Record
-#   initialize: [new, object]
-#   attach_attributes: instance
-#   before_close: '@loaded=true'
-#   elements:
-#   - name: field
-#     class: Rfm::Metadata::Field
-#     compact: true
-#     attach: cursor
-#     before_close: :end_element_callback
-#   - name: relatedset
-#     class: Array
-#     as_name: portals
-#     attach: instance
-#     attach_attributes: instance
-#     delineate_with_hash: table
-#     elements:
-#     - name: record
-#       class: Rfm::Record
-#       attach_attributes: instance
-#       before_close: '@loaded=true'
-#       elements:
-#       - name: field
-#         compact: true
-#         class: Rfm::Metadata::Field
-#         attach: cursor
-#         before_close: :end_element_callback
-# 
-
-
-# # This puts all metadata into the @attributes var.
-# ---
-# elements:
-# - name: fmresultset
-#   attach: none
-#   attach_attributes: shared
-# - name: product
-#   attach: shared
-# - name: error
-#   attach: none
-#   attributes:
-#   - name: code
-#     as_name: error
-#     attach: shared
-# - name: datasource
-#   attach: none
-#   #class: Rfm::Datasource
-#   attach_attributes: shared
-# - name:  metadata
-#   attach: none
-# - name: field_definition
-#   delineate_with_hash: name
-#   as_name: field_meta
-#   attach: shared
-# - name: relatedset_definition
-#   delineate_with_hash: table
-#   as_name: portal_meta
-#   attach: shared
-# - name: resultset
-#   attach: none
-#   attach_attributes: shared
-# - name: record
-#   class: Rfm::Record
-#   initialize: [new, object]
-#   attach: array
-#   before_close: '@loaded=true'
-#   elements:
-#   - name: field
-#     class: Rfm::Metadata::Field
-#     compact: true
-#     attach: cursor
-#     before_close: :end_element_callback
-#   - name: relatedset
-#     class: Array
-#     as_name: portals
-#     attach: instance
-#     attach_attributes: instance
-#     delineate_with_hash: table
-#     elements:
-#     - name: record
-#       class: Rfm::Record
-#       attach: array
-#       before_close: '@loaded=true'
-#       elements:
-#       - name: field
-#         compact: true
-#         class: Rfm::Metadata::Field
-#         attach: cursor
-#         before_close: :end_element_callback
-
-
-
-# # This puts field_meta and portal_meta in separate instance variables.
-# ---
-# elements:
-# - name: fmresultset
-#   attach: none
-#   attach_attributes: shared
-# - name: product
-#   attach: shared
-# - name: error
-#   attach: none
-#   attributes:
-#   - name: code
-#     as_name: error
-#     attach: shared
-# - name: datasource
-#   attach: none
-#   #class: Rfm::Datasource
-#   attach_attributes: shared
-# - name:  metadata
-#   attach: none
-# - name: field_definition
-#   delineate_with_hash: name
-#   as_name: field_meta
-#   attach: instance
-# - name: relatedset_definition
-#   delineate_with_hash: table
-#   as_name: portal_meta
-#   attach: instance
-# - name: resultset
-#   attach: none
-#   attach_attributes: shared
-# - name: record
-#   class: Rfm::Record
-#   attach: array
-#   elements:
-#   - name: field
-#     class: Rfm::Metadata::Field
-#     compact: true
-#     attach: cursor
-#     before_close: :end_element_callback
-#   - name: relatedset
-#     class: Rfm::RelatedSet
-#     attach: instance
-#     as_name: portals
-#     delineate_with_hash: table
-#     elements:
-#     - name: record
-#       class: Rfm::Record
-#       attach: array
-#       elements:
-#       - name: field
-#         compact: true
-#         class: Rfm::Metadata::Field
-#         attach: cursor
-#         before_close: :end_element_callback
-
-
-# ---
-# elements:
-# - name: fmresultset
-#   attach: none
-#   attach_attributes: shared
-# - name: product
-#   attach: shared
-# - name: error
-#   attach: none
-#   attributes:
-#   - name: code
-#     as_name: error
-#     attach: shared
-# - name: datasource
-#   attach: none
-#   #class: Rfm::Datasource
-#   attach_attributes: shared
-# - name:  metadata
-#   attach: none
-# - name: field_definition
-#   delineate_with_hash: name
-#   as_name: field_meta
-# - name: relatedset_definition
-#   delineate_with_hash: table
-#   as_name: portal_meta
-# - name: resultset
-#   attach: none
-#   attach_attributes: shared
-# - name: record
-#   class: Rfm::Record
-#   attach: array
-#   elements:
-#   - name: field
-#     class: Rfm::Metadata::Field
-#     compact: true
-#     attach: cursor
-#     before_close: :end_element_callback
-#   - name: relatedset
-#     class: Rfm::RelatedSet
-#     attach: instance
-#     as_name: portals
-#     delineate_with_hash: table
-#     elements:
-#     - name: record
-#       class: Rfm::Record
-#       attach: array
-#       elements:
-#       - name: field
-#         compact: true
-#         class: Rfm::Metadata::Field
-#         attach: cursor
-#         before_close: :end_element_callback
-
