Fixed case mismatch in hash key in Factory classes. Added logging of parsing template to logging of parsing backend.

--- a/lib/rfm/utilities/sax/fmpxml_minimal.yml
+++ b/lib/rfm/utilities/sax/fmpxml_minimal.yml
@@ -34,7 +34,7 @@
 attach_elements: none
 attach_attributes: none
 elements:
-- name: DATA
+- name: data
   compact: true
   attach: hash
   attach_attributes: hash
