--- a/lib/rfm/utilities/sax/fmresultset.yml
+++ b/lib/rfm/utilities/sax/fmresultset.yml
@@ -25,8 +25,6 @@ elements:
   before_close: :end_datasource_element_callback
 - name:  metadata
   attach: none
-  # this doesn't stop creation of attribute accessors
-  #create_accessors: none
 - name: field_definition
   handler: [object.meta, handle_new_field, _attributes]
   before_close: :main_callback
@@ -44,6 +42,7 @@ elements:
     before_close: :portal_callback
 - name: resultset
   attach: none
+  create_accessors: none
 - name: record
   handler: [object, handle_new_record, _attributes]
   before_close: '@loaded=true'
