Added check_errors to Layout#laod_layout, but it's breaking specs. Added .ruby-version back into repo (but won't be included in gem build).

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,5 @@ Gemfile.lock
 *.diff
 .bundle/***
 vendor/***
-.ruby-version
+# keep ruby-version in git repo, but don't include it in gem build
+#.ruby-version
