--- a/lib/rfm/utilities/sax/fmpxmllayout.yml
+++ b/lib/rfm/utilities/sax/fmpxmllayout.yml
@@ -28,7 +28,7 @@ elements:
   - name: NAME
     as_name: name
 - name: field
-  handler: [object.instance_variable_get(:@meta), handle_new_field_control, _attributes]
+  handler: [object.instance_variable_get('@meta'), handle_new_field_control, _attributes]
   attach_attributes: private
   elements:
   - name: style
