Optimizing sax_parser: moved _attach_object! default options to constant Object::ATTACH_OBJECT_DEFAULT_OPTIONS.

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ Gemfile.lock
 vendor/***
 # keep ruby-version in git repo, but don't include it in gem build
 #.ruby-version
+ruby-prof-*.html
+ruby-prof-*.txt
