--- a/lib/rfm/utilities/sax/fmresultset.yml
+++ b/lib/rfm/utilities/sax/fmresultset.yml
@@ -22,14 +22,16 @@ elements:
     as_name: error
 - name: datasource
   attach: none
+  # This needs to work in all-elements-have-cursor scheme.
+  before_close: :end_datasource_element_callback
   attributes:
   - name: total_count
     accessor: none
-  before_close: :end_datasource_element_callback
 - name:  metadata
   attach: none
 - name: field_definition
   handler: [object.meta, handle_new_field, _attributes]
+  attach_attributes: private
   before_close: :main_callback
 - name: relatedset_definition
   delimiter: table
