--- a/lib/rfm/utilities/sax/fmpxmllayout.yml
+++ b/lib/rfm/utilities/sax/fmpxmllayout.yml
@@ -28,11 +28,17 @@ elements:
   - name: NAME
     as_name: name
 - name: field
-  # Used to be 'object.meta', but that required sloppy 'loaded' indicator handling (or infinite loop),
-  # so now just referring to raw inst var @meta, instead of method .meta.
-  # Need to assume attributes may or may not be included in start_element call.
-  handler: [object.instance_variable_get('@meta'), handle_new_field_control, _attributes]
-  # This isn't doing anything.
+  class: Rfm::Metadata::FieldControl
+  attach: cursor
+  initialize: 
+  - :new
+  - ivg(:meta)
+  before_close: :element_close_handler
+  # # Used to be 'object.meta', but that required sloppy 'loaded' indicator handling (or infinite loop),
+  # # so now just referring to raw inst var @meta, instead of method .meta.
+  # # Need to assume attributes may or may not be included in start_element call.
+  # handler: [object.instance_variable_get('@meta'), handle_new_field_control, _attributes]
+  # # attach_attributes isn't doing anything when used with new-element-handler.
   attach_attributes: private
   elements:
   - name: style
