--- a/lib/rfm/utilities/sax/fmpxmllayout.yml
+++ b/lib/rfm/utilities/sax/fmpxmllayout.yml
@@ -14,7 +14,7 @@ elements:
   attach: none
 - name: errorcode
   attach: none
-  before_close: 'check_for_errors'
+  before_close: check_for_errors
   attributes:
   - name: text
     as_name: error
@@ -33,7 +33,7 @@ elements:
   initialize: 
   - :new
   - ivg(:meta)
-  before_close: :element_close_handler
+  before_close: [object, element_close_handler, self]
   # # Used to be 'object.meta', but that required sloppy 'loaded' indicator handling (or infinite loop),
   # # so now just referring to raw inst var @meta, instead of method .meta.
   # # Need to assume attributes may or may not be included in start_element call.
@@ -47,7 +47,7 @@ elements:
     attributes:
     - name: valuelist
       as_name: value_list_name
-      translate: translate_style_value
+      #translate: translate_style_value
 - name: valuelists
   attach: none
 - name: valuelist
