--- a/lib/rfm/utilities/sax/fmresultset.yml
+++ b/lib/rfm/utilities/sax/fmresultset.yml
@@ -53,7 +53,11 @@ elements:
   - name: fetch_size
     accessor: none
 - name: record
-  element_handler: [object, handle_new_record, _attributes]
+  initialize_with: [object, handle_new_record, _attributes]
+  attach: cursor
+  attach_attributes: private
+  # This was not handling individual attribute parsing correctly
+  #element_handler: [object, handle_new_record, _attributes]
   before_close: '@loaded=true'
   elements:
   - name: field
