Fixed ox parsing of Rfm::Record record_id & mod_id. Stopped using handler for creation of Rfm::Record in sax parser. Added some functional specs for sax parser.

--- a/lib/rfm/utilities/sax/fmresultset.yml
+++ b/lib/rfm/utilities/sax/fmresultset.yml
@@ -58,8 +58,10 @@ elements:
   - name: fetch_size
     accessor: none
 - name: record
-  attach: [cursor, object, handle_new_record, _attributes]
-  attach_attributes: none
+  #attach: [cursor, object, handle_new_record, _attributes]
+  #attach_attributes: none
+  attach: [array, 'Rfm::Record', new, object]
+  attach_attributes: private
   before_close: '@loaded=true'
   elements:
   - name: field
