--- a/lib/rfm/utilities/sax/fmresultset.yml
+++ b/lib/rfm/utilities/sax/fmresultset.yml
@@ -16,13 +16,13 @@ elements:
 - name: product
 - name: error
   attach: none
-  before_close: check_for_errors
+  before_close: :check_for_errors
   attributes:
   - name: code
     as_name: error
 - name: datasource
   attach: none
-  before_close: [object, end_datasource_element_callback]
+  before_close: [object, ':end_datasource_element_callback']
   attributes:
   - name: total_count
     accessor: none
