--- a/lib/rfm/utilities/sax/fmresultset.yml
+++ b/lib/rfm/utilities/sax/fmresultset.yml
@@ -22,7 +22,7 @@ elements:
     as_name: error
 - name: datasource
   attach: none
-  before_close: [object, ':end_datasource_element_callback']
+  before_close: [object, end_datasource_element_callback, self]
   attributes:
   - name: total_count
     accessor: none
